# TestCpp

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: machine.cpp  machine.h  native-lib.cpp  native-lib.h
app/src/main/java/com/yuangudashen/testcpp/testcpp/: MainActivity.java  NativeUtils.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
makecpplib/: CMakeLists.txt  build.gradle
makecpplib/src/main/: AndroidManifest.xml
makecpplib/src/main/cpp/: RR1.txt  algorithm.cpp  algorithm.h  algorithmlib.h  classicalpse-impl.h  classicalpse.h  constants.h  convolution.h  correlation.h  dwt-impl.h  dwt.h  fft.h  fftmr.h  fftpf.h  filtercoefs-impl.h  filtercoefs.h  impl.cpp  interpolation.h  matrix.h  spline3interp-impl.h  spline3interp.h  timing.h  usingdeclare.h  utilities.h  vector.h  vectormath.h  window.h
makecpplib/src/main/java/com/yuangudashen/testcpp/makecpplib/: MainActivity.java  NativeUtils.java
makecpplib/src/main/java/com/yuangudashen/testcpp/makecpplib/coustomviews/: DoublePoint.java  LineView.java
makecpplib/src/main/res/layout/: activity_main.xml
makecpplib/src/main/res/values/: strings.xml
mpchatlib/src/main/java/com/github/mikephil/charting/renderer/: LineChartRenderer.java
mpchatlib/src/main/res/values/: strings.xml
testcpplib/: build.gradle
testcpplib/src/main/: AndroidManifest.xml
testcpplib/src/main/java/com/yuangudashen/testcpp/makecpplib/: DoublePoint.java  MainActivity.java  PsdDataDef.java
testcpplib/src/main/res/drawable/: fade_green.xml  fade_red.xml
testcpplib/src/main/res/layout/: activity_main.xml
testcpplib/src/main/res/values/: strings.xml
testmakefingerprint/: CMakeLists.txt  build.gradle
testmakefingerprint/src/main/: AndroidManifest.xml
testmakefingerprint/src/main/cpp/: export.cpp  file.cpp  fingerprint.cpp  fingerprint.h  floatfield.cpp  image.cpp  imagemanip.cpp  img_base.cpp  img_enhance.cpp  img_morphology.cpp  import.cpp  main.cpp  matching.cpp  minutia.cpp  widget.cpp
testmakefingerprint/src/main/java/com/yuangudashen/testcpp/testmakefingerprint/: MainActivity.java  NativeUtils.java
testmakefingerprint/src/main/res/layout/: activity_main.xml
testmakefingerprint/src/main/res/values/: strings.xml
testmakeso1/: build.gradle
testmakeso1/src/main/: AndroidManifest.xml
testmakeso1/src/main/java/com/yuangudashen/testcpp/testmakeso1/: MainActivity.java  NativeUtils.java
testmakeso1/src/main/jni/: com_yuangudashen_testcpp_testmakeso1_NativeUtils.cpp  com_yuangudashen_testcpp_testmakeso1_NativeUtils.h
testmakeso1/src/main/res/layout/: activity_main.xml
testmakeso1/src/main/res/values/: strings.xml
testnativelib/: .gitignore  build.gradle
testnativelib/src/main/: AndroidManifest.xml
testnativelib/src/main/java/com/yuangudashen/testcpp/testcpp/: MainActivity.java
testnativelib/src/main/res/layout/: activity_main.xml
testnativelib/src/main/res/values/: strings.xml
